[project]
name = "llm-echo"
version = "0.3a0"
description = "Debug plugin for LLM"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm>=0.26a0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-echo"
Changelog = "https://github.com/simonw/llm-echo/releases"
Issues = "https://github.com/simonw/llm-echo/issues"
CI = "https://github.com/simonw/llm-echo/actions"

[project.entry-points.llm]
echo = "llm_echo"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
